# iparadize

./: .gitignore  README.md  pyproject.toml  requirements.txt
iparadize/: main.py
